Added resume/email, updated WIP message

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Hello world!
+Work-in-progress. In the meantime, check out <a target="_blank" href="files/CodyBanister_Resume-2021.pdf">my resume</a>
+or contact me at <a href="mailto:cody.banister@gmail.com">cody.banister@gmail.com</a>. Thanks!
